--- a/style.css
+++ b/style.css
@@ -160,6 +160,10 @@ header {
   box-shadow: 10px 10px 5px rgb(230, 183, 165) ;
   font-size: medium;
 }
+.icon{
+  padding: 30px;
+  font-size: medium;
+}
 .saver{
   width: 1479px;
   border: none;
@@ -221,10 +225,12 @@ header {
 #footer {
   font-size: large;
   font-family: tahoma, sans-serif;
-  left: 0;
-  bottom: 0;
-  background-color: rgb(209, 230, 238);
-  color: black;
-  text-align: center;
+  background-color: bisque;
+  text-align: left;
+  
   padding: 20px;
+}
+.text{
+  margin-left: 30vh;
+  
 }
