--- a/request1.css
+++ b/request1.css
@@ -78,9 +78,9 @@
     
   }
   .outerbox{
-    margin-top: 2px;
+    margin-top: 10px;
     width: 33%;
-    margin-left: 10em;
+    margin-left: 15em;
     
   }
   input{
@@ -91,8 +91,8 @@
     border-radius: 10px;
     border-color: rgb(240, 230, 230);
 }
-input[type="submit"] {
-  margin-left: 6vw;
+input[type="submit"], input[type="button"]{
+  margin-left: 1vw;
   background-color: #fc0808;
   color: white;
   width: 10em;
@@ -100,9 +100,7 @@ input[type="submit"] {
   border-radius: 10px;
   font-size: 15px;
   cursor: pointer;
-}
-input[type="submit"]:hover {
-  background-color: #ff0000;
+  margin-bottom: 20px;
 }
 /*#gender{
   width: 12.5em;
